--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
   <!-- ===============================================-->
   <!--    Favicons-->
   <!-- ===============================================-->
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
-  <meta name="msapplication-TileImage" content="/assets/img/favicons/mstile-150x150.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicons/favicon-16x16.png">
+  <meta name="msapplication-TileImage" content="./assets/img/favicons/mstile-150x150.png">
   <meta name="theme-color" content="#ffffff">
-  <script src="/assets/js/config.js"></script>
-  <script src="/vendors/overlayscrollbars/OverlayScrollbars.min.js"></script>
+  <script src="./assets/js/config.js"></script>
+  <script src="./vendors/overlayscrollbars/OverlayScrollbars.min.js"></script>
 
   <!-- ===============================================-->
   <!--    Stylesheets-->
   <!-- ===============================================-->
-  <link href="/vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="/vendors/overlayscrollbars/OverlayScrollbars.min.css" rel="stylesheet">
-  <link href="/assets/css/theme-rtl.min.css" rel="stylesheet" id="style-rtl">
-  <link href="/assets/css/theme.min.css" rel="stylesheet" id="style-default">
-  <link href="/assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
-  <link href="/assets/css/user.min.css" rel="stylesheet" id="user-style-default">
+  <link href="./vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="./vendors/overlayscrollbars/OverlayScrollbars.min.css" rel="stylesheet">
+  <link href="./assets/css/theme-rtl.min.css" rel="stylesheet" id="style-rtl">
+  <link href="./assets/css/theme.min.css" rel="stylesheet" id="style-default">
+  <link href="./assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
+  <link href="./assets/css/user.min.css" rel="stylesheet" id="user-style-default">
   <script>
     var isRTL = JSON.parse(localStorage.getItem('isRTL'));
     if (isRTL) {
@@ -542,17 +542,17 @@
   <!-- ===============================================-->
   <!--    JavaScripts-->
   <!-- ===============================================-->
-  <script src="/vendors/popper/popper.min.js"></script>
-  <script src="/vendors/bootstrap/bootstrap.min.js"></script>
-  <script src="/vendors/anchorjs/anchor.min.js"></script>
-  <script src="/vendors/is/is.min.js"></script>
-  <script src="/vendors/swiper/swiper-bundle.min.js"> </script>
-  <script src="/vendors/typed.js/typed.js"></script>
-  <script src="/vendors/fontawesome/all.min.js"></script>
-  <script src="/vendors/lodash/lodash.min.js"></script>
+  <script src="./vendors/popper/popper.min.js"></script>
+  <script src="./vendors/bootstrap/bootstrap.min.js"></script>
+  <script src="./vendors/anchorjs/anchor.min.js"></script>
+  <script src="./vendors/is/is.min.js"></script>
+  <script src="./vendors/swiper/swiper-bundle.min.js"> </script>
+  <script src="./vendors/typed.js/typed.js"></script>
+  <script src="./vendors/fontawesome/all.min.js"></script>
+  <script src="./vendors/lodash/lodash.min.js"></script>
   <script src="////polyfill.io/v3/polyfill.min58be.js?features=window.scroll"></script>
-  <script src="/vendors/list.js/list.min.js"></script>
-  <script src="/assets/js/theme.js"></script>
+  <script src="./vendors/list.js/list.min.js"></script>
+  <script src="./assets/js/theme.js"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
