--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
   <!-- ===============================================-->
   <!--    Favicons-->
   <!-- ===============================================-->
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
-  <meta name="msapplication-TileImage" content="/assets/img/favicons/mstile-150x150.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicons/favicon-16x16.png">
+  <meta name="msapplication-TileImage" content="./assets/img/favicons/mstile-150x150.png">
   <meta name="theme-color" content="#ffffff">
-  <script src="/assets/js/config.js"></script>
-  <script src="/vendors/overlayscrollbars/OverlayScrollbars.min.js"></script>
+  <script src="./assets/js/config.js"></script>
+  <script src="./vendors/overlayscrollbars/OverlayScrollbars.min.js"></script>
 
   <!-- ===============================================-->
   <!--    Stylesheets-->
-  <!-- ===============================================-->
-  <link href="/vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="/vendors/overlayscrollbars/OverlayScrollbars.min.css" rel="stylesheet">
-  <link href="/assets/css/theme-rtl.min.css" rel="stylesheet" id="style-rtl">
-  <link href="/assets/css/theme.min.css" rel="stylesheet" id="style-default">
-  <link href="/assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
-  <link href="/assets/css/user.min.css" rel="stylesheet" id="user-style-default">
+  <!-- =============================================== /vendors/swiper/swiper-bundle.min.css-->
+  <link href="./vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="./vendors/overlayscrollbars/OverlayScrollbars.min.css" rel="stylesheet">
+  <link href="./assets/css/theme-rtl.min.css" rel="stylesheet" id="style-rtl">
+  <link href="./assets/css/theme.min.css" rel="stylesheet" id="style-default">
+  <link href="./assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
+  <link href="./assets/css/user.min.css" rel="stylesheet" id="user-style-default">
   <script>
     var isRTL = JSON.parse(localStorage.getItem('isRTL'));
     if (isRTL) {
@@ -69,7 +69,7 @@
   <main class="main" id="top">
     <nav class="navbar navbar-standard navbar-expand-lg fixed-top navbar-dark"
       data-navbar-darken-on-scroll="data-navbar-darken-on-scroll">
-      <div class="container"><a class="navbar-brand" href="/landing.html"><span
+      <div class="container"><a class="navbar-brand" href="./landing.html"><span
             class="text-white dark__text-white">PFinanceplus</span></a><button class="navbar-toggler collapsed"
           type="button" data-bs-toggle="collapse" data-bs-target="#navbarStandard" aria-controls="navbarStandard"
           aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -81,24 +81,24 @@
               <div class="dropdown-menu dropdown-menu-card border-0 mt-0" aria-labelledby="pagess">
                 <div class="card navbar-card-pages shadow-none dark__bg-1000">
                   <div class="card-body scrollbar max-h-dropdown"><img class="img-dropdown"
-                      src="/assets/img/icons/spot-illustrations/authentication-corner.png" width="130" alt="" />
+                      src="./assets/img/icons/spot-illustrations/authentication-corner.png" width="130" alt="" />
                     <div class="row">
                       <div class="col-6 col-xxl-3">
                         <div class="nav flex-column">
                           <p class="nav-link text-700 mb-0 fw-bold">Authentication</p><a
                             class="nav-link py-1 link-600 fw-medium"
-                            href="/authentication/simple/login.html">Login</a><a
+                            href="./authentication/simple/login.html">Login</a><a
                             class="nav-link py-1 link-600 fw-medium"
-                            href="/authentication/simple/logout.html">Logout</a><a
+                            href="./authentication/simple/logout.html">Logout</a><a
                             class="nav-link py-1 link-600 fw-medium"
-                            href="/authentication/simple/register.html">Register</a><a
+                            href="./authentication/simple/register.html">Register</a><a
                             class="nav-link py-1 link-600 fw-medium"
-                            href="/authentication/simple/forgot-password.html">Forgot password</a><a
+                            href="./authentication/simple/forgot-password.html">Forgot password</a><a
                             class="nav-link py-1 link-600 fw-medium"
-                            href="/authentication/simple/confirm-mail.html">Confirm mail</a><a
+                            href="./authentication/simple/confirm-mail.html">Confirm mail</a><a
                             class="nav-link py-1 link-600 fw-medium"
-                            href="/authentication/simple/reset-password.html">Reset password</a><a
-                            class="nav-link py-1 link-600 fw-medium" href="/authentication/simple/lock-screen.html">Lock
+                            href="./authentication/simple/reset-password.html">Reset password</a><a
+                            class="nav-link py-1 link-600 fw-medium" href="./authentication/simple/lock-screen.html">Lock
                             screen</a>
                         </div>
                       </div>
@@ -135,11 +135,11 @@
                         <h5 class="mb-0">Log in</h5>
                       </div>
                       <div class="col-auto">
-                        <p class="fs--1 text-600 mb-0">or <a href="/authentication/simple/register.html">Create an
+                        <p class="fs--1 text-600 mb-0">or <a href="./authentication/simple/register.html">Create an
                             account</a></p>
                       </div>
                     </div>
-                    <form action="/dashboard.html">
+                    <form action="index.html">
                       <div class="mb-3"><input class="form-control" type="email" placeholder="Email address" /></div>
                       <div class="mb-3"><input class="form-control" type="password" placeholder="Password" /></div>
                       <div class="row flex-between-center">
@@ -148,7 +148,7 @@
                               id="modal-checkbox" /><label class="form-check-label mb-0" for="modal-checkbox">Remember
                               me</label></div>
                         </div>
-                        <div class="col-auto"><a class="fs--1" href="/authentication/simple/forgot-password.html">Forgot
+                        <div class="col-auto"><a class="fs--1" href="./authentication/simple/forgot-password.html">Forgot
                             Password?</a></div>
                       </div>
                       <div class="mb-3"><button class="btn btn-primary d-block w-100 mt-3" type="submit"
@@ -184,7 +184,7 @@
                 <h5 id="modalLabel">Register</h5>
               </div>
               <div class="col-auto">
-                <p class="fs--1 text-600 mb-0">Have an account? <a href="/authentication/simple/login.html">Login</a>
+                <p class="fs--1 text-600 mb-0">Have an account? <a href="./authentication/simple/login.html">Login</a>
                 </p>
               </div>
             </div>
@@ -233,7 +233,7 @@
                 data-typed-text='["greater","experience","with", "Perpetual","FinancePlus"]'></span><br /></h1>
             <p class="lead text-white opacity-75">Transforming our society through ICT</p><a
               class="btn btn-outline-light border-2 rounded-pill btn-lg mt-4 fs-0 py-2"
-              href="/authentication/simple/login.html">Getting Started<span class="fas fa-play ms-2"
+              href="./authentication/simple/login.html">Getting Started<span class="fas fa-play ms-2"
                 data-fa-transform="shrink-6 down-1"></span></a>
           </div>
         </div>
@@ -255,7 +255,7 @@
                     <p class="fs-sm-1 fs-md-2 fst-italic text-dark">Perpetual FinancePlus is the best the software for
                       monitoring your finances</p>
                     <p class="fs-0 text-600">- Perpetual team</p><img class="w-auto mx-auto"
-                      src="/assets/img/logos/p-slider.png" alt="" height="45" />
+                      src="./assets/img/logos/p-slider.png" alt="" height="45" />
                   </div>
                 </div>
                 <div class="swiper-slide">
@@ -264,7 +264,7 @@
                       elit. Neque, corrupti.
                     </p>
                     <p class="fs-0 text-600">- Anonymous, Developer</p><img class="w-auto mx-auto"
-                      src="/assets/img/logos/p-slider.png" alt="" height="30" />
+                      src="./assets/img/logos/p-slider.png" alt="" height="30" />
                   </div>
                 </div>
                 <div class="swiper-slide">
@@ -272,7 +272,7 @@
                     <p class="fs-sm-1 fs-md-2 fst-italic text-dark">When I first used Perpetual FinancePlus, I was
                       totally blown away by the care taken in the interfaces which are user friendly</p>
                     <p class="fs-0 text-600">- Anonymous, Designer</p><img class="w-auto mx-auto"
-                      src="/assets/img/logos/p-slider.png" alt="" height="45" />
+                      src="./assets/img/logos/p-slider.png" alt="" height="45" />
                   </div>
                 </div>
               </div>
@@ -447,12 +447,12 @@
           <div class="col-6"><input class="btn-check" id="themeSwitcherLight" name="theme-color" type="radio"
               value="light" data-theme-control="theme" /><label class="btn d-inline-block btn-navbar-style fs--1"
               for="themeSwitcherLight"> <span class="hover-overlay mb-2 rounded d-block"><img
-                  class="img-fluid img-prototype mb-0" src="/assets/img/generic/falcon-mode-default.jpg"
+                  class="img-fluid img-prototype mb-0" src="./assets/img/generic/falcon-mode-default.jpg"
                   alt="" /></span><span class="label-text">Light</span></label></div>
           <div class="col-6"><input class="btn-check" id="themeSwitcherDark" name="theme-color" type="radio"
               value="dark" data-theme-control="theme" /><label class="btn d-inline-block btn-navbar-style fs--1"
               for="themeSwitcherDark"> <span class="hover-overlay mb-2 rounded d-block"><img
-                  class="img-fluid img-prototype mb-0" src="/assets/img/generic/falcon-mode-dark.jpg"
+                  class="img-fluid img-prototype mb-0" src="./assets/img/generic/falcon-mode-dark.jpg"
                   alt="" /></span><span class="label-text"> Dark</span></label></div>
         </div>
       </div>
@@ -505,20 +505,20 @@
           <div class="col-6"><input class="btn-check" id="navbar-style-transparent" type="radio" name="navbarStyle"
               value="transparent" data-theme-control="navbarStyle" /><label
               class="btn d-block w-100 btn-navbar-style fs--1" for="navbar-style-transparent"> <img
-                class="img-fluid img-prototype" src="/assets/img/generic/default.png" alt="" /><span class="label-text">
+                class="img-fluid img-prototype" src="./assets/img/generic/default.png" alt="" /><span class="label-text">
                 Transparent</span></label></div>
           <div class="col-6"><input class="btn-check" id="navbar-style-inverted" type="radio" name="navbarStyle"
               value="inverted" data-theme-control="navbarStyle" /><label
               class="btn d-block w-100 btn-navbar-style fs--1" for="navbar-style-inverted"> <img
-                class="img-fluid img-prototype" src="/assets/img/generic/inverted.png" alt="" /><span
+                class="img-fluid img-prototype" src="./assets/img/generic/inverted.png" alt="" /><span
                 class="label-text"> Inverted</span></label></div>
           <div class="col-6"><input class="btn-check" id="navbar-style-card" type="radio" name="navbarStyle"
               value="card" data-theme-control="navbarStyle" /><label class="btn d-block w-100 btn-navbar-style fs--1"
-              for="navbar-style-card"> <img class="img-fluid img-prototype" src="/assets/img/generic/card.png"
+              for="navbar-style-card"> <img class="img-fluid img-prototype" src="./assets/img/generic/card.png"
                 alt="" /><span class="label-text"> Card</span></label></div>
           <div class="col-6"><input class="btn-check" id="navbar-style-vibrant" type="radio" name="navbarStyle"
               value="vibrant" data-theme-control="navbarStyle" /><label class="btn d-block w-100 btn-navbar-style fs--1"
-              for="navbar-style-vibrant"> <img class="img-fluid img-prototype" src="/assets/img/generic/vibrant.png"
+              for="navbar-style-vibrant"> <img class="img-fluid img-prototype" src="./assets/img/generic/vibrant.png"
                 alt="" /><span class="label-text"> Vibrant</span></label></div>
         </div>
       </div>
@@ -542,17 +542,16 @@
   <!-- ===============================================-->
   <!--    JavaScripts-->
   <!-- ===============================================-->
-  <script src="/vendors/popper/popper.min.js"></script>
-  <script src="/vendors/bootstrap/bootstrap.min.js"></script>
-  <script src="/vendors/anchorjs/anchor.min.js"></script>
-  <script src="/vendors/is/is.min.js"></script>
-  <script src="/vendors/swiper/swiper-bundle.min.js"> </script>
-  <script src="/vendors/typed.js/typed.js"></script>
-  <script src="/vendors/fontawesome/all.min.js"></script>
-  <script src="/vendors/lodash/lodash.min.js"></script>
-  <script src="////polyfill.io/v3/polyfill.min58be.js?features=window.scroll"></script>
-  <script src="/vendors/list.js/list.min.js"></script>
-  <script src="/assets/js/theme.js"></script>
+  <script src="./vendors/popper/popper.min.js"></script>
+  <script src="./vendors/bootstrap/bootstrap.min.js"></script>
+  <script src="./vendors/anchorjs/anchor.min.js"></script>
+  <script src="./vendors/is/is.min.js"></script>
+  <script src="./vendors/swiper/swiper-bundle.min.js"> </script>
+  <script src="./vendors/typed.js/typed.js"></script>
+  <script src="./vendors/fontawesome/all.min.js"></script>
+  <script src="./vendors/lodash/lodash.min.js"></script>
+  <script src="./vendors/list.js/list.min.js"></script>
+  <script src="./assets/js/theme.js"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
