--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <!-- <section> begin ============================-->
     <section class="py-0 overflow-hidden light" id="banner">
       <div class="bg-holder overlay"
-        style="background-image:url(/assets/img/generic/bg-1.jpg);background-position: center bottom;"></div>
+        style="background-image:url(./assets/img/generic/bg-1.jpg);background-position: center bottom;"></div>
       <!--/.bg-holder-->
       <div class="container">
         <div class="row flex-center pt-8 pt-lg-10 pb-lg-9 pb-xl-0">
@@ -293,7 +293,7 @@
     <!-- <section> begin ============================-->
     <section class="light">
       <div class="bg-holder overlay"
-        style="background-image:url(/assets/img/generic/bg-2.jpg);background-position: center top;"></div>
+        style="background-image:url(./assets/img/generic/bg-2.jpg);background-position: center top;"></div>
       <!--/.bg-holder-->
       <div class="container">
         <div class="row justify-content-center text-center">
