--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
             <!-- LOGO -->
             <div class="topbar-left">
                 <div class="text-center">
-                    <a href="/dashboard.html" class="logo"><i class="mdi mdi-radar"></i> <span>Karibu
+                    <a href="./dashboard.html" class="logo"><i class="mdi mdi-radar"></i> <span>Karibu
                             Groceries</span></a>
                 </div>
             </div>
