--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 
 <head>
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="../assets/images/favicon.ico">
+    <link rel="shortcut icon" href="./assets/images/favicon.ico">
     <title>Karibu Groceries | Dashboard</title>
-    <link href="../plugins/switchery/switchery.min.css" rel="stylesheet" />
-    <link href="../plugins/jquery-circliful/css/jquery.circliful.css" rel="stylesheet" type="text/css" />
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="../assets/css/icons.css" rel="stylesheet" type="text/css">
-    <link href="../assets/css/style.css" rel="stylesheet" type="text/css">
-    <script src="../assets/js/modernizr.min.js"></script>
+    <link href="./plugins/switchery/switchery.min.css" rel="stylesheet" />
+    <link href="./plugins/jquery-circliful/css/jquery.circliful.css" rel="stylesheet" type="text/css" />
+    <link href="./assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="./assets/css/icons.css" rel="stylesheet" type="text/css">
+    <link href="./assets/css/style.css" rel="stylesheet" type="text/css">
+    <script src="./assets/js/modernizr.min.js"></script>
 
 </head>
 
@@ -62,7 +62,7 @@
                         <a class="nav-link dropdown-toggle waves-effect waves-light nav-user" data-toggle="dropdown"
                             href="#" role="button" aria-haspopup="false" aria-expanded="false">
                             <!--<img src="assets/images/users/avatar-1.jpg" alt="user" class="rounded-circle">-->
-                            <img src="../assets/images/pendeza_logo.png" alt="user" class="rounded-circle">
+                            <img src="./assets/images/pendeza_logo.png" alt="user" class="rounded-circle">
 
                         </a>
                         <div class="dropdown-menu dropdown-menu-right profile-dropdown " aria-labelledby="Preview">
@@ -88,7 +88,7 @@
                             </a>
 
                             <!-- item-->
-                            <a href="../authentication/simple/logout.html" class="dropdown-item notify-item">
+                            <a href="./authentication/simple/logout.html" class="dropdown-item notify-item">
                                 <i class="mdi mdi-logout"></i> <span>Logout</span>
                             </a>
 
@@ -465,7 +465,7 @@
                     <asp:Label ID="Labelyear" runat="server"
                         style="color: #0033CC; font-style: italic; font-weight: 700"> </asp:Label> Karibu Groceries -<a
                         href="http://www.perpetualict.com" target="_blank"> crafted by <img
-                            src="../images/footer_logo.png" height="20" width="20" /></a>
+                            src="./images/footer_logo.png" height="20" width="20" /></a>
                 </span> | All Rights | <a href="#!">User Manual</a>
             </footer>
 
@@ -481,36 +481,36 @@
     </script>
 
     <!-- Plugins  -->
-    <script src="../assets/js/jquery.min.js"></script>
+    <script src="./assets/js/jquery.min.js"></script>
     <script src="./assets/js/popper.min.js"></script><!-- Popper for Bootstrap -->
-    <script src="../assets/js/bootstrap.min.js"></script>
-    <script src="../assets/js/detect.js"></script>
-    <script src="../assets/js/fastclick.js"></script>
-    <script src="../assets/js/jquery.slimscroll.js"></script>
-    <script src="../assets/js/jquery.blockUI.js"></script>
-    <script src="../assets/js/waves.js"></script>
-    <script src="../assets/js/wow.min.js"></script>
-    <script src="../assets/js/jquery.nicescroll.js"></script>
-    <script src="../assets/js/jquery.scrollTo.min.js"></script>
-    <script src="../plugins/switchery/switchery.min.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/detect.js"></script>
+    <script src="./assets/js/fastclick.js"></script>
+    <script src="./assets/js/jquery.slimscroll.js"></script>
+    <script src="./assets/js/jquery.blockUI.js"></script>
+    <script src="./assets/js/waves.js"></script>
+    <script src="./assets/js/wow.min.js"></script>
+    <script src="./assets/js/jquery.nicescroll.js"></script>
+    <script src="./assets/js/jquery.scrollTo.min.js"></script>
+    <script src="./plugins/switchery/switchery.min.js"></script>
 
     <!-- Counter Up  -->
-    <script src="../plugins/waypoints/lib/jquery.waypoints.min.js"></script>
-    <script src="../plugins/counterup/jquery.counterup.min.js"></script>
+    <script src="./plugins/waypoints/lib/jquery.waypoints.min.js"></script>
+    <script src="./plugins/counterup/jquery.counterup.min.js"></script>
 
     <!-- circliful Chart -->
-    <script src="../plugins/jquery-circliful/js/jquery.circliful.min.js"></script>
-    <script src="../plugins/jquery-sparkline/jquery.sparkline.min.js"></script>
+    <script src="./plugins/jquery-circliful/js/jquery.circliful.min.js"></script>
+    <script src="./plugins/jquery-sparkline/jquery.sparkline.min.js"></script>
 
     <!-- skycons -->
-    <script src="../plugins/skyicons/skycons.min.js" type="text/javascript"></script>
+    <script src="./plugins/skyicons/skycons.min.js" type="text/javascript"></script>
 
     <!-- Page js  -->
-    <script src="../assets/pages/jquery.dashboard.js"></script>
+    <script src="./assets/pages/jquery.dashboard.js"></script>
 
     <!-- Custom main Js -->
-    <script src="../assets/js/jquery.core.js"></script>
-    <script src="../assets/js/jquery.app.js"></script>
+    <script src="./assets/js/jquery.core.js"></script>
+    <script src="./assets/js/jquery.app.js"></script>
 
 
     <script type="text/javascript">
