--- a/dashboard.html
+++ b/dashboard.html
@@ -123,7 +123,7 @@
                 <div id="sidebar-menu">
                     <ul>
                         <li>
-                            <a href="/dashboard.html" class="waves-effect waves-primary">
+                            <a href="./dashboard.html" class="waves-effect waves-primary">
                                 <i class="ti-home"></i><span>Dashboard</span>
                                 <span class="badge badge-primary pull-right">#</span>
                             </a>
