--- a/index.html
+++ b/index.html
@@ -30,8 +30,16 @@
   <link href="./assets/css/theme.min.css" rel="stylesheet" id="style-default">
   <link href="./assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
   <link href="./assets/css/user.min.css" rel="stylesheet" id="user-style-default">
-
+  
+    <!--load fontawesome cdn-->
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
+        integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
+    
     .carousel-inner {
       height: 500px;
       width: 100%;
