--- a/register/add.html
+++ b/register/add.html
@@ -16,6 +16,13 @@
     <link href="../assets/css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../Style/chosen.css" /><!-- Important for searhable dropdwn-->
 
+    <!--load fontawesome cdn-->
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
+        integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style type="text/css">
         body {
             /*background-color:#DDDDDD;*/
@@ -178,7 +185,7 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-package"></i> <span> Purchase </span>
+                                <i class="fa-solid fa-cash-register"></i> <span> Purchase </span>
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
@@ -191,7 +198,7 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-package"></i> <span> Suppliers </span>
+                                <i class="fa-solid fa-store"></i> <span> Suppliers </span>
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
@@ -203,7 +210,7 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-package"></i> <span> Items </span>
+                                <i class="fa fa-list-alt"></i> <span> Items </span>
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
@@ -219,7 +226,7 @@
                         </li>
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-pencil-alt"></i> <span> Expenses </span>
+                                <i class="fas fa-money-bill-alt"></i> <span> Expenses </span>
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
@@ -232,7 +239,7 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-stats-up"></i> <span> Reports </span>
+                                <i class="fa fa-bar-chart"></i> <span> Reports </span>
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
@@ -253,7 +260,7 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-user"></i> <span> Users </span>
+                                <i class="fa fa-users"></i> <span> Users </span>
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
@@ -278,7 +285,7 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-user"></i> <span> Help </span>
+                                <i class="fa fa-question-circle"></i> <span> Help </span>
                                 <span class="menu-arrow"></span>
                             </a>
 
