validated add file

--- a/authentication/simple/login.html
+++ b/authentication/simple/login.html
@@ -32,6 +32,8 @@
   <link href="../../assets/css/theme.min.css" rel="stylesheet" id="style-default">
   <link href="../../assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
   <link href="../../assets/css/user.min.css" rel="stylesheet" id="user-style-default">
+  <link rel="stylesheet" href="./css/style.css">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q3E3XZ7RL7"></script>
 </head>
 
 <body>
@@ -56,9 +58,9 @@
               aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
               <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="../../index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="login.html">Log in</a></li>
-                <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+                <li class="nav-item"><a class="nav-link" href="../../index.html" style="color: white;">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="login.html" style="color: white;">Log in</a></li>
+                <li class="nav-item"><a class="nav-link" href="register.html" style="color: white;">Register</a></li>
               </ul>
             </div>
           </div>
@@ -76,30 +78,32 @@
                 <div class="col-auto fs--1 text-600"><span class="mb-0 undefined">or</span> <span><a
                       href="register.html">Create an account</a></span></div>
               </div>
-              <form action="login.html">
-                <div class="mb-3"><input class="form-control" type="email" placeholder="Email address" /></div>
-                <div class="mb-3"><input class="form-control" type="password" placeholder="Password" /></div>
-                <div class="row flex-between-center">
-                  <div class="col-auto">
-                    <div class="form-check mb-0"><input class="form-check-input" type="checkbox" id="basic-checkbox"
-                        checked="checked" /><label class="form-check-label mb-0" for="basic-checkbox">Remember
-                        me</label></div>
-                  </div>
-                  <div class="col-auto"><a class="fs--1" href="forgot-password.html">Forgot Password?</a></div>
+              <!-- start reg form -->
+              <form id="signup" class="form">
+                <div class="form-field">
+                  <label for="username">Username:</label>
+                  <input type="text" name="username" id="username" autocomplete="off">
+                  <small></small>
                 </div>
-                <div class="mb-3"><button class="btn btn-primary d-block w-100 mt-3" type="submit" name="submit">Log
-                    in</button></div>
+
+                <div class="form-field">
+                  <label for="email">Email:</label>
+                  <input type="text" name="email" id="email" autocomplete="off">
+                  <small></small>
+                </div>
+
+                <div class="form-field">
+                  <label for="password">Password:</label>
+                  <input type="password" name="password" id="password" autocomplete="off">
+                  <small><a href="  http://127.0.0.1:5500/authentication/simple/forgot-password.html">Forgot Password?</a></small>
+                </div>
+                
+                <hr>
+                <div class="mb-3">
+                  <input type="submit" value="LOGIN" class="btn btn-primary d-block w-100 mt-3">
+                </div>
               </form>
-              <div class="position-relative mt-4">
-                <hr class="bg-300" />
-                <div class="divider-content-center">or log in with</div>
-              </div>
-              <div class="row g-2 mt-2">
-                <div class="col-sm-6"><a class="btn btn-outline-google-plus btn-sm d-block w-100" href="#"><span
-                      class="fab fa-google-plus-g me-2" data-fa-transform="grow-8"></span> google</a></div>
-                <div class="col-sm-6"><a class="btn btn-outline-facebook btn-sm d-block w-100" href="#"><span
-                      class="fab fa-facebook-square me-2" data-fa-transform="grow-8"></span> facebook</a></div>
-              </div>
+              <!-- end reg form -->
             </div>
           </div>
         </div>
@@ -144,6 +148,7 @@
   <script src="../../assets/js/theme.js"></script>
   <script src="../../assets/js/config.js"></script>
   <script src="../../vendors/overlayscrollbars/OverlayScrollbars.min.js"></script>
+  <script src="./js/app.js"></script>
   <script>
     var isRTL = JSON.parse(localStorage.getItem('isRTL'));
     if (isRTL) {
