--- a/authentication/simple/register.html
+++ b/authentication/simple/register.html
@@ -5,25 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- ===============================================-->
-  <!--    Document Title-->
-  <!-- ===============================================-->
   <title>Karibu Groceries | Register</title>
 
-  <!-- ===============================================-->
-  <!--    Favicons-->
-  <!-- ===============================================-->
-  <link rel="apple-touch-icon" sizes="180x180" href="../../assets/img/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../../assets/img/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../../assets/img/favicons/favicon-16x16.png">
-  <link rel="manifest" href="https://prium.github.io/falcon/v3.4.0/assets/img/favicons/manifest.json">
-  <meta name="msapplication-TileImage" content="../../assets/img/favicons/mstile-150x150.png">
-  <meta name="theme-color" content="#ffffff">
-
-  <!-- ===============================================-->
-  <!--    Stylesheets-->
-  <!-- ===============================================-->
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700%7cPoppins:300,400,500,600,700,800,900&amp;display=swap"
     rel="stylesheet">
@@ -32,122 +15,113 @@
   <link href="../../assets/css/theme.min.css" rel="stylesheet" id="style-default">
   <link href="../../assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
   <link href="../../assets/css/user.min.css" rel="stylesheet" id="user-style-default">
+
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="./reg.css" /> -->
+  <link rel="stylesheet" href="./css/style.css">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q3E3XZ7RL7"></script>
 </head>
 
 <body>
-  <!-- ===============================================-->
   <!--    Main Content-->
-  <!-- ===============================================-->
   <main class="main" id="top">
     <div class="container" data-layout="container">
-      <script>
-        var isFluid = JSON.parse(localStorage.getItem('isFluid'));
-        if (isFluid) {
-          var container = document.querySelector('[data-layout]');
-          container.classList.remove('container');
-          container.classList.add('container-fluid');
-        }
-      </script>
       <!--start navbar-->
-          <nav class="navbar navbar-standard navbar-expand-lg fixed-top navbar bg-dark">
-    
-          <div class="container"><a class="navbar-brand" href="../../index.html"><span
-                class="text-white dark__text-white">Karibu Groceries</span></a><button class="navbar-toggler collapsed"
-              type="button" data-bs-toggle="collapse" data-bs-target="#navbarStandard" aria-controls="navbarStandard"
-              aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
-              <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="../../index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="login.html">Log in</a></li>
-                <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-        <!--end navbar-->
+      <nav class="navbar navbar-standard navbar-expand-lg fixed-top navbar bg-dark">
 
-        <div class="row flex-center min-vh-100 py-6">
-          <div class="col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
-            <div class="card">
-              <div class="card-body p-4 p-sm-5">
-                <div class="row flex-between-center mb-2">
-                  <div class="col-auto">
-                    <h5>Register</h5>
-                  </div>
-                  <div class="col-auto fs--1 text-600"><span class="mb-0 undefined">Have an account?</span> <span><a
-                        href="/authentication/simple/login.html">Login</a></span></div>
+        <div class="container"><a class="navbar-brand" href="../../index.html"><span
+              class="text-white dark__text-white">Karibu Groceries</span></a><button class="navbar-toggler collapsed"
+            type="button" data-bs-toggle="collapse" data-bs-target="#navbarStandard" aria-controls="navbarStandard"
+            aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+          <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item"><a class="nav-link" href="../../index.html" style="color: white;">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="login.html" style="color: white;">Log in</a></li>
+              <li class="nav-item"><a class="nav-link" href="register.html" style="color: white;">Register</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!--end navbar-->
+
+      <div class="row flex-center min-vh-100 py-6">
+        <div class="col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
+          <div class="card">
+            <div class="card-body p-4 p-sm-5">
+              <div class="row flex-between-center mb-2">
+                <div class="col-auto">
+                  <h5>Register</h5>
                 </div>
-                <form>
-                  <div class="mb-3"><input class="form-control" type="text" autocomplete="on" placeholder="Name" /></div>
-                  <div class="mb-3"><input class="form-control" type="email" autocomplete="on"
-                      placeholder="Email address" /></div>
-                  <div class="row gx-2">
-                    <div class="mb-3 col-sm-6"><input class="form-control" type="password" autocomplete="on"
-                        placeholder="Password" /></div>
-                    <div class="mb-3 col-sm-6"><input class="form-control" type="password" autocomplete="on"
-                        placeholder="Confirm Password" /></div>
-                  </div>
-                  <div class="form-check"><input class="form-check-input" type="checkbox"
-                      id="basic-register-checkbox" /><label class="form-label" for="basic-register-checkbox">I accept the
-                      <a href="#!">terms </a>and <a href="#!">privacy policy</a></label></div>
-                  <div class="mb-3"><button class="btn btn-primary d-block w-100 mt-3" type="submit"
-                      name="submit">Register</button></div>
-                </form>
-                <div class="position-relative mt-4">
-                  <hr class="bg-300" />
-                  <div class="divider-content-center">or register with</div>
-                </div>
-                <div class="row g-2 mt-2">
-                  <div class="col-sm-6"><a class="btn btn-outline-google-plus btn-sm d-block w-100" href="#"><span
-                        class="fab fa-google-plus-g me-2" data-fa-transform="grow-8"></span> google</a></div>
-                  <div class="col-sm-6"><a class="btn btn-outline-facebook btn-sm d-block w-100" href="#"><span
-                        class="fab fa-facebook-square me-2" data-fa-transform="grow-8"></span> facebook</a></div>
-                </div>
+                <div class="col-auto fs--1 text-600"><span class="mb-0 undefined">Already have an account?</span>
+                  <span><a href="/authentication/simple/login.html">Login</a></span></div>
+                <hr>
               </div>
+              <!-- start reg form -->
+              <form id="signup" class="form">
+                <div class="form-field">
+                  <label for="username">Username:</label>
+                  <input type="text" name="username" id="username" autocomplete="off">
+                  <small></small>
+                </div>
+
+                <div class="form-field">
+                  <label for="email">Email:</label>
+                  <input type="text" name="email" id="email" autocomplete="off">
+                  <small></small>
+                </div>
+
+                <div class="form-field">
+                  <label for="password">Password:</label>
+                  <input type="password" name="password" id="password" autocomplete="off">
+                  <small></small>
+                </div>
+
+
+                <div class="form-field">
+                  <label for="confirm-password">Confirm Password:</label>
+                  <input type="password" name="confirm-password" id="confirm-password" autocomplete="off">
+                  <small></small>
+                </div>
+                <hr>
+                <div class="mb-3">
+                  <input type="submit" value="Register" class="btn btn-primary d-block w-100 mt-3">
+                </div>
+              </form>
+              <!-- end reg form -->
             </div>
           </div>
         </div>
       </div>
-    </main><!-- ===============================================-->
-    <!--    End of Main Content-->
-    <!-- ===============================================-->
-  
+    </div>
+  </main>
+  <!--    End of Main Content-->
 
-    <!-- <section> begin ============================-->
-      <section class="py-0 bg-dark light">
-        <div>
-          <hr class="my-0 text-600 opacity-25" />
-          <div class="container py-3">
-            <div class="row justify-content-between fs--1">
-              <div class="col-12 col-sm-auto text-center">
-                <p class="mb-0 text-600 opacity-85">2022 &copy; Karibu Groceries Ltd - <a a class="text-white opacity-85"
-                    href="https://perpetualict.com/" target="_blank">crafted by Edwin Niwaha</a> | All Rights
-                  Reserved
-                  <span class="d-none d-sm-inline-block">| </span><br class="d-sm-none" />
-                </p>
-              </div>
-              <div class="col-12 col-sm-auto text-center">
-                <p class="mb-0 text-600 opacity-85"></p>
-              </div>
-            </div>
+  <!-- <section> begin ============================-->
+  <section class="py-0 bg-dark light">
+    <div>
+      <hr class="my-0 text-600 opacity-25" />
+      <div class="container py-3">
+        <div class="row justify-content-between fs--1">
+          <div class="col-12 col-sm-auto text-center">
+            <p class="mb-0 text-600 opacity-85">2022 &copy; Karibu Groceries Ltd - <a a class="text-white opacity-85"
+                href="https://perpetualict.com/" target="_blank">crafted by Edwin Niwaha</a> | All Rights
+              Reserved
+              <span class="d-none d-sm-inline-block">| </span><br class="d-sm-none" />
+            </p>
           </div>
-        </div><!-- end of .container-->
-      </section><!-- <section> close ============================-->
-      <!-- ============================================-->
-  <!-- ===============================================-->
+          <div class="col-12 col-sm-auto text-center">
+            <p class="mb-0 text-600 opacity-85"></p>
+          </div>
+        </div>
+      </div>
+    </div><!-- end of .container-->
+  </section><!-- <section> close ============================-->
+
   <!--    JavaScripts-->
   <!-- ===============================================-->
-  <script src="../../vendors/popper/popper.min.js"></script>
-  <script src="../../vendors/bootstrap/bootstrap.min.js"></script>
-  <script src="../../vendors/anchorjs/anchor.min.js"></script>
-  <script src="../../vendors/is/is.min.js"></script>
-  <script src="../../vendors/fontawesome/all.min.js"></script>
-  <script src="../../vendors/lodash/lodash.min.js"></script>
-  <script src="../../../../polyfill.io/v3/polyfill.min58be.js?features=window.scroll"></script>
-  <script src="../../vendors/list.js/list.min.js"></script>
-  <script src="../../assets/js/theme.js"></script>
-  <script src="../../assets/js/config.js"></script>
-  <script src="../../vendors/overlayscrollbars/OverlayScrollbars.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="./reg.js"></script> -->
+  <script src="./js/app.js"></script>
   <script>
     var isRTL = JSON.parse(localStorage.getItem('isRTL'));
     if (isRTL) {
