--- a/dashboard.html
+++ b/dashboard.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="./assets/images/favicon.ico">
+    <link rel="shortcut icon" href="./assets/img/favicons/favicon-32x32.png">
     <title>Karibu Groceries | Dashboard</title>
+
     <link href="./plugins/switchery/switchery.min.css" rel="stylesheet" />
     <link href="./plugins/jquery-circliful/css/jquery.circliful.css" rel="stylesheet" type="text/css" />
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
