--- a/authentication/simple/reset-password.html
+++ b/authentication/simple/reset-password.html
@@ -57,9 +57,9 @@
               aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
               <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="../../index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="login.html">Log in</a></li>
-                <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+                <li class="nav-item"><a class="nav-link" href="../../index.html" style="color: white;">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="login.html" style="color: white;">Log in</a></li>
+                <li class="nav-item"><a class="nav-link" href="register.html" style="color: white;">Register</a></li>
               </ul>
             </div>
           </div>
