header file added

--- a/dashboard_admin.html
+++ b/dashboard_admin.html
@@ -124,15 +124,15 @@
 
         </div>
         <!-- Top Bar End -->
+        
         <!-- ========== Left Sidebar Start ========== Pro-->
-
         <div class="left side-menu">
             <div class="sidebar-inner slimscrollleft">
                 <!--- Divider -->
                 <div id="sidebar-menu">
                     <ul>
                         <li>
-                            <a href="./dashboard.html" class="waves-effect waves-primary">
+                            <a href="./dashboard_admin.html" class="waves-effect waves-primary">
                                 <i class="ti-home"></i><span>Dashboard</span>
                                 <span class="badge badge-primary pull-right">#</span>
                             </a>
@@ -253,7 +253,7 @@
                             <a href="javascript:void(0);" class="waves-effect waves-primary"><i
                                     class="ti-settings"></i><span> Settings </span> <span class="menu-arrow"></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="#" target="_self">Comapny Profile</a></li>
+                                <li><a href="#" target="_self">Comapany Profile</a></li>
                                 <li><a href="#" target="_self">Units List</a></li>
                                 <li><a href="#" target="_self">Payment Types</a></li>
                                 <li><a href="#" target="_self">Currency List</a></li>
@@ -292,7 +292,7 @@
                             <div class="page-title-box">
                                 <h4 class="page-title">Welcome !</h4>
                                 <ol class="breadcrumb float-right">
-                                    <li class="breadcrumb-item"><a href="#">Karibu Groceries</a></li>
+                                    <li class="breadcrumb-item"><a href="./dashboard_admin.html">Karibu Groceries</a></li>
                                     <li class="breadcrumb-item active">Dashboard</li>
                                 </ol>
                                 <div class="clearfix"></div>
