--- a/register/amend.html
+++ b/register/amend.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <title>Karibu Groceries | Add</title>
+    <title>Karibu Groceries | Amend</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
